<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="provider_authority" translatable="false">ac.mdiq.podcini.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds">Feeds</string>
    <string name="pafeeds" translatable="false">PAFeeds</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="online_episodes_label">Online episodes</string>
    <string name="feed">Feed</string>
    <string name="facets">Facets</string>
    <string name="episodes_label">Episodes</string>
    <string name="home_label">Home</string>
    <string name="queue_label">Queues</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="logs_label">Logs</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="unsubscribed_label">Unsubscribed</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">History</string>
    <string name="overview">Overview</string>
    <string name="months_statistics_label">Months</string>
    <string name="years_statistics_label">Years</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="current_episode">Current</string>
    <string name="current_podcast">Podcast</string>
    <string name="global">Global</string>
    <string name="app_action_not_found">\"%1$s\" not found</string>
    <string name="swipeactions_label">Swipe actions</string>
    <string name="swipeactions_summary">Choose what happens when swiping an episode in a list</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_left">Swipe left</string>
    <string name="individual_subscription">Subscription</string>
    <string name="subscription">Subscription</string>
    <string name="statistics_include_marked">Include duration of episodes that are just marked as played</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="statistics_start_month">Start month</string>
    <string name="statistics_end_month">End month</string>
    <string name="statistics_month_year">Format: MM/YYYY</string>
    <string name="statistics_from">From</string>
    <string name="statistics_to">To</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_filter_all_time">All time</string>
    <string name="statistics_filter_past_year">Past year</string>
    <string name="statistics_reset_data">Reset statistics data</string>
    <string name="statistics_reset_data_msg">This will erase the history of duration played for all episodes. Are you sure you want to proceed\?</string>
    <string name="statistics_counting_range">Played between %1$s and %2$s</string>
    <string name="statistics_counting_total">Played in total</string>
    <string name="web_content_not_available">Web content is not available</string>
    <string name="language_not_supported_by_tts">The language is not supported by TTS</string>
    <string name="tts_init_failed">TTS init failed</string>
    <string name="tts_not_available">TTS engine not available</string>
    <string name="episode_has_no_content">Episode has not content</string>
    <string name="unrestricted_background_permission_text">In order to successfully play a list of episodes in the background, Podcini needs Permission for Unrestricted Background Activity. Note on some brands, there are sustomized settings for this, please ensure to set them accordingly.</string>
    <string name="notification_check_permission">Check permission</string>
    <string name="notification_permission_text">Since Android 13, top level notification is needed for normal refresh and playback. You may disallow notifications of sub-catergories at your wish.</string>
    <string name="notification_permission_denied">You denied the permission.</string>
    <string name="total_size_downloaded_podcasts">Total size of episodes on the device</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="drawer_preferences">Drawer preferences</string>
    <string name="log_file_share_exception">No compatible apps found</string>
    <string name="clear_log_menu_title">Clear logs</string>
    <string name="export_logs_menu_title">Export detailed logs</string>
    <string name="confirm_export_log_dialog_message">Detailed logs may contain sensitive information, such as your subscriptions list</string>
    <string name="open_in_browser_label">Open in browser</string>
    <string name="copy_url_label">Copy URL</string>
    <string name="share_url_label">Share URL</string>
    <string name="go_to_position_label">Go to this position</string>
    <string name="show_shared_logs_label">Show shared logs</string>
    <string name="show_subscription_logs_label">Show subscription logs</string>
    <string name="show_download_logs_label">Show download logs</string>
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed\?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
    <string name="url_label">URL</string>
    <string name="support_funding_label">Support</string>
    <string name="support_podcast">Support this podcast</string>
    <string name="error_label">Error</string>
    <string name="error_msg_prefix">An error occurred:</string>
    <string name="refresh_label">Refresh</string>
    <string name="fetch_size">Fetch size</string>
    <string name="clear_cache">Clear froms cache</string>
    <string name="new_synth_label">New synthetic feed</string>
    <string name="new_synth_yt_label">New synthetic Youtube</string>
    <string name="toggle_grid_list">Toggle grid list</string>
    <string name="refreshing_label">Refreshing</string>
    <string name="clear_new_label">Clear new</string>
    <string name="reconcile_label">Reconcile</string>
    <string name="chapters_label">Chapters</string>
    <string name="clips">Clips</string>
    <string name="ask_remove_clip">Do you want to remove clip: %1$s ?</string>
    <string name="marks">Marks</string>
    <string name="ask_remove_mark">Do you want to remove mark: %1$s ?</string>
    <string name="play_mark_msg">The mark can be sought to when the episode is being played.</string>
    <string name="chapter_duration0">Duration: </string>
    <string name="description_label">Description</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_colon">Auto: </string>
    <string name="enqueue">Enqueue</string>
    <string name="download">Download</string>
    <string name="auto_enqueue_sum">Enabling auto-enqueue adds qualified episodes to associated queue (on (auto-)refreshing).</string>
    <string name="auto_enqueue_sum1">Auto-enqueue requires associated queue not set to None.</string>
    <string name="auto_download_sum">Enabling auto-download downloads of qualified episodes and add them to associated queue (when it\'s not be set to None on (auto-)refreshing).</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_delete_episode">Auto delete episode</string>
    <string name="auto_delete_sum">Delete after marked played</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="feed_volume_reduction_off">No adaption</string>
    <string name="feed_volume_reduction_light">Light reduction</string>
    <string name="feed_volume_reduction_heavy">Heavy reduction</string>
    <string name="feed_volume_boost_light">Light boost</string>
    <string name="feed_volume_boost_medium">Medium boost</string>
    <string name="feed_volume_boost_heavy">Heavy boost</string>
    <string name="feed_auto_download_always">Always</string>
    <string name="feed_auto_download_never">Never</string>
    <string name="feed_video_mode_label">Video mode</string>
    <string name="feed_video_mode_window">Window mode</string>
    <string name="feed_video_mode_fullscreen">Full screen</string>
    <string name="feed_video_mode_audioonly">Audio only</string>
    <string name="feed_automation_policy">Automation policy</string>
    <string name="feed_auto_dleq_new">Only new items</string>
    <string name="replace">Replace</string>
    <string name="feed_auto_dleq_newer">Newest unplayed</string>
    <string name="feed_auto_dleq_older">Oldest unplayed</string>
    <string name="feed_auto_dleq_discretion">Discretionary</string>
    <string name="feed_auto_dleq_soon">Marked as Soon</string>
    <string name="feed_auto_dleq_filter_sort">Current filter and sort</string>
    <string name="put_in_queue_label">Add to queue…</string>
    <string name="remove_from_other_queues">Remove from other queues</string>
    <string name="create_synthetic_first_note">You need to create some synthetic feeds first</string>
    <string name="remove_from_current_feed">Remove from current feed</string>
    <string name="episode_cleanup_limit_by">Limit by</string>
    <string name="episode_cleanup_never">Never</string>
    <string name="episode_cleanup_except_favorite">When not favorited</string>
    <string name="episode_cleanup_not_in_queue">When not in queue</string>
    <string name="episode_cleanup_after_listening">After finishing</string>
    <plurals name="episode_cleanup_hours_after_listening">
        <item quantity="one">1 hour after finishing</item>
        <item quantity="other">%d hours after finishing</item>
    </plurals>
    <plurals name="episode_cleanup_days_after_listening">
        <item quantity="one">1 day after finishing</item>
        <item quantity="other">%d days after finishing</item>
    </plurals>
    <string name="max_episodes_cache">Max episodes allowed</string>
    <string name="new_namee">New name</string>
    <string name="feed_settings_label">Podcast settings</string>
    <string name="switch_queue_label">Choose active queue</string>
    <string name="rename_feed_label">Rename podcast</string>
    <string name="remove_feed_label">Remove podcast</string>
    <string name="init_tts">Start TTS</string>
    <string name="share_label">Share</string>
    <string name="share_file_label">Share file</string>
    <string name="share_notes_label">Share notes</string>
    <string name="ignore_episodes_confirmation_msg">Please confirm that you want to ignore episodes.</string>
    <string name="erase_episodes_confirmation_msg">Please confirm that you want to erase episodes.</string>
    <string name="feed_delete_confirmation_msg">Please confirm that you want to delete the podcast \"%1$s\", ALL its episodes (including downloaded episodes), and its statistics.</string>
    <string name="feed_delete_confirmation_msg_batch">Please confirm that you want to remove the selected podcasts, ALL their episodes (including downloaded episodes), and its statistics.</string>
    <string name="feed_delete_confirmation_local_msg">Please confirm that you want to remove the podcast \"%1$s\" and its statistics. The files in the local source folder will not be deleted.</string>
</resources>