<?xml version ="1.0" encoding ="utf-8"?>
<actions>
    <action intentName="actions.intent.OPEN_APP_FEATURE">
        <fulfillment urlTemplate="https://podcini.org/deeplink/main{?page}">
            <parameter-mapping intentParameter="feature" urlParameter="page" />
        </fulfillment>
        <parameter name="feature">
            <entity-set-reference entitySetId="featureEntitySet" />
        </parameter>
    </action>

    <action intentName="actions.intent.GET_THING">
        <fulfillment urlTemplate="https://podcini.org/deeplink/search{?query}">
            <parameter-mapping intentParameter="thing.name" urlParameter="query"/>
        </fulfillment>
    </action>

    <entity-set entitySetId="featureEntitySet">
        <entity identifier="QUEUES" name="@string/queue_label" />
        <entity identifier="FACETS" name="@string/facets" />
        <entity identifier="LIBRARY" name="@string/library" />
        <entity identifier="STATISTCS" name="@string/statistics_label" />
    </entity-set>
</actions>
